<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_entry_item"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/msg_image_entry_edition_description"
            app:srcCompat="@color/colorPrimary"/>

        <TextView
            android:id="@+id/day_number_entry_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="12"
            android:textAppearance="@style/TextAppearance.AppCompat.Title.Inverse"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="@+id/image_entry_item"
            app:layout_constraintStart_toStartOf="@+id/image_entry_item"
            app:layout_constraintTop_toTopOf="@+id/image_entry_item" />

        <TextView
            android:id="@+id/day_entry_item"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_marginBottom="3dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="Wednesday"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/day_number_entry_item"
            app:layout_constraintVertical_bias="0.0" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title_entry_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="14dp"
            android:maxLength="25"
            android:text="@string/title_entry_item"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_entry_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/text_entry_item"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_entry_item"
            app:layout_constraintVertical_bias="0.184" />
    </android.support.constraint.ConstraintLayout>

</LinearLayout>
